fixed sides for border-[side]-[property]

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1582,7 +1582,7 @@
 .BORDERALLSOLIDGREY21, .BASOG21,
 .BORDERALLSOLIDGREY31, .BASOG31
 {
-    border-top-width: 1px;
+    border-right-width: 1px;
 }
 .BORDERRIGHTDASHEDRED2, .BRDAR2,
 .BORDERRIGHTDASHEDGREEN2, .BRDAG2,
@@ -1657,7 +1657,7 @@
 .BORDERALLSOLIDGREY22, .BASOG22,
 .BORDERALLSOLIDGREY32, .BASOG32
 {
-    border-top-width: 2px;
+    border-right-width: 2px;
 }
 .BORDERRIGHTDASHEDRED3, .BRDAR3,
 .BORDERRIGHTDASHEDGREEN3, .BRDAG3,
@@ -1732,7 +1732,7 @@
 .BORDERALLSOLIDGREY23, .BASOG23,
 .BORDERALLSOLIDGREY33, .BASOG33
 {
-    border-top-width: 3px;
+    border-right-width: 3px;
 }
 .BORDERRIGHTDASHEDRED4, .BRDAR4,
 .BORDERRIGHTDASHEDGREEN4, .BRDAG4,
@@ -1807,7 +1807,7 @@
 .BORDERALLSOLIDGREY24, .BASOG24,
 .BORDERALLSOLIDGREY34, .BASOG34
 {
-    border-top-width: 4px;
+    border-right-width: 4px;
 }
 .BORDERRIGHTDASHEDRED5, .BRDAR5,
 .BORDERRIGHTDASHEDGREEN5, .BRDAG5,
@@ -1882,7 +1882,7 @@
 .BORDERALLSOLIDGREY25, .BASOG25,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-width: 5px;
+    border-right-width: 5px;
 }
 
 .BORDERRIGHTDASHEDRED1, .BRDAR1,
@@ -1976,7 +1976,7 @@
 .BORDERALLDASHEDGREY34, .BADAG34,
 .BORDERALLDASHEDGREY35, .BADAG35
 {
-    border-top-style: dashed;
+    border-right-style: dashed;
 }
 .BORDERRIGHTDOUBLERED1, .BRDOR1,
 .BORDERRIGHTDOUBLERED2, .BRDOR2,
@@ -2069,7 +2069,7 @@
 .BORDERALLDOUBLEGREY34, .BADOG34,
 .BORDERALLDOUBLEGREY35, .BADOG35
 {
-    border-top-style: double;
+    border-right-style: double;
 }
 .BORDERRIGHTDOTTEDRED1, .BRDTR1,
 .BORDERRIGHTDOTTEDRED2, .BRDTR2,
@@ -2162,7 +2162,7 @@
 .BORDERALLDOTTEDGREY34, .BADTG34,
 .BORDERALLDOTTEDGREY35, .BADTG35
 {
-    border-top-style: dotted;
+    border-right-style: dotted;
 }
 .BORDERRIGHTSOLIDRED1, .BRSOR1,
 .BORDERRIGHTSOLIDRED2, .BRSOR2,
@@ -2255,7 +2255,7 @@
 .BORDERALLSOLIDGREY34, .BASOG34,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-style: solid;
+    border-right-style: solid;
 }
 
 .BORDERRIGHTDASHEDRED1, .BRDAR1,
@@ -2299,7 +2299,7 @@
 .BORDERALLSOLIDRED4, .BASOR4,
 .BORDERALLSOLIDRED5, .BASOR5
 {
-    border-top-color: #FF0000;
+    border-right-color: #FF0000;
 }
 .BORDERRIGHTDASHEDGREEN1, .BRDAG1,
 .BORDERRIGHTDASHEDGREEN2, .BRDAG2,
@@ -2342,7 +2342,7 @@
 .BORDERALLSOLIDGREEN4, .BASOG4,
 .BORDERALLSOLIDGREEN5, .BASOG5
 {
-    border-top-color: #00FF00;
+    border-right-color: #00FF00;
 }
 .BORDERRIGHTDASHEDBLUE1, .BRDAB1,
 .BORDERRIGHTDASHEDBLUE2, .BRDAB2,
@@ -2385,7 +2385,7 @@
 .BORDERALLSOLIDBLUE4, .BASOB4,
 .BORDERALLSOLIDBLUE5, .BASOB5
 {
-    border-top-color: #0000FF;
+    border-right-color: #0000FF;
 }
 .BORDERRIGHTDASHEDYELLOW1, .BRDAY1,
 .BORDERRIGHTDASHEDYELLOW2, .BRDAY2,
@@ -2428,7 +2428,7 @@
 .BORDERALLSOLIDYELLOW4, .BASOY4,
 .BORDERALLSOLIDYELLOW5, .BASOY5
 {
-    border-top-color: #FFFF00;
+    border-right-color: #FFFF00;
 }
 .BORDERRIGHTDASHEDBLACK1, .BRDA01,
 .BORDERRIGHTDASHEDBLACK2, .BRDA02,
@@ -2471,7 +2471,7 @@
 .BORDERALLSOLIDBLACK4, .BASO04,
 .BORDERALLSOLIDBLACK5, .BASO05
 {
-    border-top-color: #000000;
+    border-right-color: #000000;
 }
 .BORDERRIGHTDASHEDWHITE1, .BRDAW1,
 .BORDERRIGHTDASHEDWHITE2, .BRDAW2,
@@ -2514,7 +2514,7 @@
 .BORDERALLSOLIDWHITE4, .BASOW4,
 .BORDERALLSOLIDWHITE5, .BASOW5
 {
-    border-top-color: #FFFFFF;
+    border-right-color: #FFFFFF;
 }
 .BORDERRIGHTDASHEDGREY11, .BRDAG11,
 .BORDERRIGHTDASHEDGREY12, .BRDAG12,
@@ -2557,7 +2557,7 @@
 .BORDERALLSOLIDGREY14, .BASOG14,
 .BORDERALLSOLIDGREY15, .BASOG15
 {
-    border-top-color: #3F3F3F;
+    border-right-color: #3F3F3F;
 }
 .BORDERRIGHTDASHEDGREY21, .BRDAG21,
 .BORDERRIGHTDASHEDGREY22, .BRDAG22,
@@ -2600,7 +2600,7 @@
 .BORDERALLSOLIDGREY24, .BASOG24,
 .BORDERALLSOLIDGREY25, .BASOG25
 {
-    border-top-color: #7F7F7F;
+    border-right-color: #7F7F7F;
 }
 .BORDERRIGHTDASHEDGREY31, .BRDAG31,
 .BORDERRIGHTDASHEDGREY32, .BRDAG32,
@@ -2643,7 +2643,7 @@
 .BORDERALLSOLIDGREY34, .BASOG34,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-color: #BFBFBF;
+    border-right-color: #BFBFBF;
 }
 /* Bottom ----------------------------- */
 .BORDERBOTTOMDASHEDRED1, .BBDAR1,
@@ -2719,7 +2719,7 @@
 .BORDERALLSOLIDGREY21, .BASOG21,
 .BORDERALLSOLIDGREY31, .BASOG31
 {
-    border-top-width: 1px;
+    border-bottom-width: 1px;
 }
 .BORDERBOTTOMDASHEDRED2, .BBDAR2,
 .BORDERBOTTOMDASHEDGREEN2, .BBDAG2,
@@ -2794,7 +2794,7 @@
 .BORDERALLSOLIDGREY22, .BASOG22,
 .BORDERALLSOLIDGREY32, .BASOG32
 {
-    border-top-width: 2px;
+    border-bottom-width: 2px;
 }
 .BORDERBOTTOMDASHEDRED3, .BBDAR3,
 .BORDERBOTTOMDASHEDGREEN3, .BBDAG3,
@@ -2869,7 +2869,7 @@
 .BORDERALLSOLIDGREY23, .BASOG23,
 .BORDERALLSOLIDGREY33, .BASOG33
 {
-    border-top-width: 3px;
+    border-bottom-width: 3px;
 }
 .BORDERBOTTOMDASHEDRED4, .BBDAR4,
 .BORDERBOTTOMDASHEDGREEN4, .BBDAG4,
@@ -2944,7 +2944,7 @@
 .BORDERALLSOLIDGREY24, .BASOG24,
 .BORDERALLSOLIDGREY34, .BASOG34
 {
-    border-top-width: 4px;
+    border-bottom-width: 4px;
 }
 .BORDERBOTTOMDASHEDRED5, .BBDAR5,
 .BORDERBOTTOMDASHEDGREEN5, .BBDAG5,
@@ -3019,7 +3019,7 @@
 .BORDERALLSOLIDGREY25, .BASOG25,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-width: 5px;
+    border-bottom-width: 5px;
 }
 
 .BORDERBOTTOMDASHEDRED1, .BBDAR1,
@@ -3113,7 +3113,7 @@
 .BORDERALLDASHEDGREY34, .BADAG34,
 .BORDERALLDASHEDGREY35, .BADAG35
 {
-    border-top-style: dashed;
+    border-bottom-style: dashed;
 }
 .BORDERBOTTOMDOUBLERED1, .BBDOR1,
 .BORDERBOTTOMDOUBLERED2, .BBDOR2,
@@ -3206,7 +3206,7 @@
 .BORDERALLDOUBLEGREY34, .BADOG34,
 .BORDERALLDOUBLEGREY35, .BADOG35
 {
-    border-top-style: double;
+    border-bottom-style: double;
 }
 .BORDERBOTTOMDOTTEDRED1, .BBDTR1,
 .BORDERBOTTOMDOTTEDRED2, .BBDTR2,
@@ -3299,7 +3299,7 @@
 .BORDERALLDOTTEDGREY34, .BADTG34,
 .BORDERALLDOTTEDGREY35, .BADTG35
 {
-    border-top-style: dotted;
+    border-bottom-style: dotted;
 }
 .BORDERBOTTOMSOLIDRED1, .BBSOR1,
 .BORDERBOTTOMSOLIDRED2, .BBSOR2,
@@ -3392,7 +3392,7 @@
 .BORDERALLSOLIDGREY34, .BASOG34,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-style: solid;
+    border-bottom-style: solid;
 }
 
 .BORDERBOTTOMDASHEDRED1, .BBDAR1,
@@ -3436,7 +3436,7 @@
 .BORDERALLSOLIDRED4, .BASOR4,
 .BORDERALLSOLIDRED5, .BASOR5
 {
-    border-top-color: #FF0000;
+    border-bottom-color: #FF0000;
 }
 .BORDERBOTTOMDASHEDGREEN1, .BBDAG1,
 .BORDERBOTTOMDASHEDGREEN2, .BBDAG2,
@@ -3479,7 +3479,7 @@
 .BORDERALLSOLIDGREEN4, .BASOG4,
 .BORDERALLSOLIDGREEN5, .BASOG5
 {
-    border-top-color: #00FF00;
+    border-bottom-color: #00FF00;
 }
 .BORDERBOTTOMDASHEDBLUE1, .BBDAB1,
 .BORDERBOTTOMDASHEDBLUE2, .BBDAB2,
@@ -3522,7 +3522,7 @@
 .BORDERALLSOLIDBLUE4, .BASOB4,
 .BORDERALLSOLIDBLUE5, .BASOB5
 {
-    border-top-color: #0000FF;
+    border-bottom-color: #0000FF;
 }
 .BORDERBOTTOMDASHEDYELLOW1, .BBDAY1,
 .BORDERBOTTOMDASHEDYELLOW2, .BBDAY2,
@@ -3565,7 +3565,7 @@
 .BORDERALLSOLIDYELLOW4, .BASOY4,
 .BORDERALLSOLIDYELLOW5, .BASOY5
 {
-    border-top-color: #FFFF00;
+    border-bottom-color: #FFFF00;
 }
 .BORDERBOTTOMDASHEDBLACK1, .BBDA01,
 .BORDERBOTTOMDASHEDBLACK2, .BBDA02,
@@ -3608,7 +3608,7 @@
 .BORDERALLSOLIDBLACK4, .BASO04,
 .BORDERALLSOLIDBLACK5, .BASO05
 {
-    border-top-color: #000000;
+    border-bottom-color: #000000;
 }
 .BORDERBOTTOMDASHEDWHITE1, .BBDAW1,
 .BORDERBOTTOMDASHEDWHITE2, .BBDAW2,
@@ -3651,7 +3651,7 @@
 .BORDERALLSOLIDWHITE4, .BASOW4,
 .BORDERALLSOLIDWHITE5, .BASOW5
 {
-    border-top-color: #FFFFFF;
+    border-bottom-color: #FFFFFF;
 }
 .BORDERBOTTOMDASHEDGREY11, .BBDAG11,
 .BORDERBOTTOMDASHEDGREY12, .BBDAG12,
@@ -3694,7 +3694,7 @@
 .BORDERALLSOLIDGREY14, .BASOG14,
 .BORDERALLSOLIDGREY15, .BASOG15
 {
-    border-top-color: #3F3F3F;
+    border-bottom-color: #3F3F3F;
 }
 .BORDERBOTTOMDASHEDGREY21, .BBDAG21,
 .BORDERBOTTOMDASHEDGREY22, .BBDAG22,
@@ -3737,7 +3737,7 @@
 .BORDERALLSOLIDGREY24, .BASOG24,
 .BORDERALLSOLIDGREY25, .BASOG25
 {
-    border-top-color: #7F7F7F;
+    border-bottom-color: #7F7F7F;
 }
 .BORDERBOTTOMDASHEDGREY31, .BBDAG31,
 .BORDERBOTTOMDASHEDGREY32, .BBDAG32,
@@ -3780,7 +3780,7 @@
 .BORDERALLSOLIDGREY34, .BASOG34,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-color: #BFBFBF;
+    border-bottom-color: #BFBFBF;
 }
 /* Left ------------------------------- */
 .BORDERLEFTDASHEDRED1, .BLDAR1,
@@ -3856,7 +3856,7 @@
 .BORDERALLSOLIDGREY21, .BASOG21,
 .BORDERALLSOLIDGREY31, .BASOG31
 {
-    border-top-width: 1px;
+    border-left-width: 1px;
 }
 .BORDERLEFTDASHEDRED2, .BLDAR2,
 .BORDERLEFTDASHEDGREEN2, .BLDAG2,
@@ -3931,7 +3931,7 @@
 .BORDERALLSOLIDGREY22, .BASOG22,
 .BORDERALLSOLIDGREY32, .BASOG32
 {
-    border-top-width: 2px;
+    border-left-width: 2px;
 }
 .BORDERLEFTDASHEDRED3, .BLDAR3,
 .BORDERLEFTDASHEDGREEN3, .BLDAG3,
@@ -4006,7 +4006,7 @@
 .BORDERALLSOLIDGREY23, .BASOG23,
 .BORDERALLSOLIDGREY33, .BASOG33
 {
-    border-top-width: 3px;
+    border-left-width: 3px;
 }
 .BORDERLEFTDASHEDRED4, .BLDAR4,
 .BORDERLEFTDASHEDGREEN4, .BLDAG4,
@@ -4081,7 +4081,7 @@
 .BORDERALLSOLIDGREY24, .BASOG24,
 .BORDERALLSOLIDGREY34, .BASOG34
 {
-    border-top-width: 4px;
+    border-left-width: 4px;
 }
 .BORDERLEFTDASHEDRED5, .BLDAR5,
 .BORDERLEFTDASHEDGREEN5, .BLDAG5,
@@ -4156,7 +4156,7 @@
 .BORDERALLSOLIDGREY25, .BASOG25,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-width: 5px;
+    border-left-width: 5px;
 }
 
 .BORDERLEFTDASHEDRED1, .BLDAR1,
@@ -4250,7 +4250,7 @@
 .BORDERALLDASHEDGREY34, .BADAG34,
 .BORDERALLDASHEDGREY35, .BADAG35
 {
-    border-top-style: dashed;
+    border-left-style: dashed;
 }
 .BORDERLEFTDOUBLERED1, .BLDOR1,
 .BORDERLEFTDOUBLERED2, .BLDOR2,
@@ -4343,7 +4343,7 @@
 .BORDERALLDOUBLEGREY34, .BADOG34,
 .BORDERALLDOUBLEGREY35, .BADOG35
 {
-    border-top-style: double;
+    border-left-style: double;
 }
 .BORDERLEFTDOTTEDRED1, .BLDTR1,
 .BORDERLEFTDOTTEDRED2, .BLDTR2,
@@ -4436,7 +4436,7 @@
 .BORDERALLDOTTEDGREY34, .BADTG34,
 .BORDERALLDOTTEDGREY35, .BADTG35
 {
-    border-top-style: dotted;
+    border-left-style: dotted;
 }
 .BORDERLEFTSOLIDRED1, .BLSOR1,
 .BORDERLEFTSOLIDRED2, .BLSOR2,
@@ -4529,7 +4529,7 @@
 .BORDERALLSOLIDGREY34, .BASOG34,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-style: solid;
+    border-left-style: solid;
 }
 
 .BORDERLEFTDASHEDRED1, .BLDAR1,
@@ -4573,7 +4573,7 @@
 .BORDERALLSOLIDRED4, .BASOR4,
 .BORDERALLSOLIDRED5, .BASOR5
 {
-    border-top-color: #FF0000;
+    border-left-color: #FF0000;
 }
 .BORDERLEFTDASHEDGREEN1, .BLDAG1,
 .BORDERLEFTDASHEDGREEN2, .BLDAG2,
@@ -4616,7 +4616,7 @@
 .BORDERALLSOLIDGREEN4, .BASOG4,
 .BORDERALLSOLIDGREEN5, .BASOG5
 {
-    border-top-color: #00FF00;
+    border-left-color: #00FF00;
 }
 .BORDERLEFTDASHEDBLUE1, .BLDAB1,
 .BORDERLEFTDASHEDBLUE2, .BLDAB2,
@@ -4659,7 +4659,7 @@
 .BORDERALLSOLIDBLUE4, .BASOB4,
 .BORDERALLSOLIDBLUE5, .BASOB5
 {
-    border-top-color: #0000FF;
+    border-left-color: #0000FF;
 }
 .BORDERLEFTDASHEDYELLOW1, .BLDAY1,
 .BORDERLEFTDASHEDYELLOW2, .BLDAY2,
@@ -4702,7 +4702,7 @@
 .BORDERALLSOLIDYELLOW4, .BASOY4,
 .BORDERALLSOLIDYELLOW5, .BASOY5
 {
-    border-top-color: #FFFF00;
+    border-left-color: #FFFF00;
 }
 .BORDERLEFTDASHEDBLACK1, .BLDA01,
 .BORDERLEFTDASHEDBLACK2, .BLDA02,
@@ -4745,7 +4745,7 @@
 .BORDERALLSOLIDBLACK4, .BASO04,
 .BORDERALLSOLIDBLACK5, .BASO05
 {
-    border-top-color: #000000;
+    border-left-color: #000000;
 }
 .BORDERLEFTDASHEDWHITE1, .BLDAW1,
 .BORDERLEFTDASHEDWHITE2, .BLDAW2,
@@ -4788,7 +4788,7 @@
 .BORDERALLSOLIDWHITE4, .BASOW4,
 .BORDERALLSOLIDWHITE5, .BASOW5
 {
-    border-top-color: #FFFFFF;
+    border-left-color: #FFFFFF;
 }
 .BORDERLEFTDASHEDGREY11, .BLDAG11,
 .BORDERLEFTDASHEDGREY12, .BLDAG12,
@@ -4831,7 +4831,7 @@
 .BORDERALLSOLIDGREY14, .BASOG14,
 .BORDERALLSOLIDGREY15, .BASOG15
 {
-    border-top-color: #3F3F3F;
+    border-left-color: #3F3F3F;
 }
 .BORDERLEFTDASHEDGREY21, .BLDAG21,
 .BORDERLEFTDASHEDGREY22, .BLDAG22,
@@ -4874,7 +4874,7 @@
 .BORDERALLSOLIDGREY24, .BASOG24,
 .BORDERALLSOLIDGREY25, .BASOG25
 {
-    border-top-color: #7F7F7F;
+    border-left-color: #7F7F7F;
 }
 .BORDERLEFTDASHEDGREY31, .BLDAG31,
 .BORDERLEFTDASHEDGREY32, .BLDAG32,
@@ -4917,7 +4917,7 @@
 .BORDERALLSOLIDGREY34, .BASOG34,
 .BORDERALLSOLIDGREY35, .BASOG35
 {
-    border-top-color: #BFBFBF;
+    border-left-color: #BFBFBF;
 }
 /* SIMPLE BORDER (solid black) ------------------------------------------------ */
 /* Top -------------------------------- */
