--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,68 @@ div.rule-show
     background-color: #00BFBF;
 }
 
-div.rule-show div
+div.rule-show >div
 {
     width: 50%;
 }
 
-div.rule-show div:first-child
+div.rule-show > div:first-child
 {
     border: 2px solid #3F3F3F;
+}
+.avec{
+  float: right;
+  padding-right: 20%;
+}
+.sans{
+padding-left: 40%;
+}
+.FLEXTABLECOLLUMN {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.ololbackground1 {
+    background: linear-gradient(325deg, #1dddac, #941f1f);
+    background-size: 400% 400%;
+    -webkit-animation: AnimationName 15s ease infinite;
+    -moz-animation: AnimationName 15s ease infinite;
+    animation: AnimationName 15s ease infinite;
+}
+
+.ololbackground2 {
+    background: linear-gradient(325deg, #3866b4, #528c32, #a13337);
+    background-size: 600% 600%;
+    -webkit-animation: AnimationName 15s ease infinite;
+    -moz-animation: AnimationName 15s ease infinite;
+    animation: AnimationName 15s ease infinite;
+}
+.ololbackground3{
+background: linear-gradient(108deg, #1cf0b9, #fd9e00, #f90061, #1100f9, #44f900, #afbfa9, #03f2ff, #ff00f5, #000000);
+background-size: 1800% 1800%;
+
+-webkit-animation: AnimationName 9s ease infinite;
+-moz-animation: AnimationName 9s ease infinite;
+animation: AnimationName 9s ease infinite;
+}
+.BG1{
+    background-color: #00FFFF;
+}
+.BG2{
+    background-color: purple;
+}
+@-webkit-keyframes AnimationName {
+   0%{background-position:0% 86%}
+   50%{background-position:100% 15%}
+   100%{background-position:0% 86%}
+}
+@-moz-keyframes AnimationName {
+   0%{background-position:0% 86%}
+   50%{background-position:100% 15%}
+   100%{background-position:0% 86%}
+}
+@keyframes AnimationName {
+   0%{background-position:0% 86%}
+   50%{background-position:100% 15%}
+   100%{background-position:0% 86%}
 }
